--- a/packages/_apps/server/package.json
+++ b/packages/_apps/server/package.json
@@ -4,6 +4,8 @@
     "description": "Boilerplate to build a full stack web application using React, Node.js, Express and Webpack.",
     "main": "src/index.ts",
     "scripts": {
+      "build": "babel src/index.ts --out-file dist/bundle.js",
+      "start-server": "npm run build && node dist/bundle.js",
       "server": "nodemon src/index.ts"
     },
     "author": "Sandeep Raveesh",
@@ -13,6 +15,7 @@
       "typescript": "^4.5.5"
     },
     "devDependencies": {
+      "@babel/node": "7.16.8",
       "eslint": "^5.0.0",
       "eslint-config-airbnb": "^17.0.0",
       "eslint-plugin-import": "^2.11.0",
