--- a/packages/_apps/client/package.json
+++ b/packages/_apps/client/package.json
@@ -10,18 +10,18 @@
     "license": "ISC",
     "dependencies": {
       "babel-polyfill": "^6.26.0",
-      "express": "^4.16.3",
       "react": "^16.5.2",
       "react-dom": "^16.5.2",
       "typescript": "^4.5.5"
     },
     "devDependencies": {
       "@babel/cli": "^7.14.8",
+      "@types/react": "17.0.0",
+      "@dieta-libs/common": "1.0.0",
       "@babel/core": "^7.14.8",
       "@babel/preset-env": "^7.14.8",
       "@babel/preset-react": "^7.14.5",
       "@babel/preset-typescript": "^7.14.5",
-      "@types/express": "^4.17.1",
       "babel-eslint": "^10.0.0",
       "babel-loader": "^8.0.0",
       "clean-webpack-plugin": "^1.0.0",
