--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-	"name": "@dieta/root",
-	"version": "1.0.0",
-	"description": "Boilerplate to build a full stack web application using React, Node.js, Express and Webpack.",
-	"main": "src/index.ts",
-	"author": "Sandeep Raveesh",
-	"license": "ISC",
-	"scripts": {
-		"clean-install": "lerna bootstrap",
-		"build": "lerna run build",
-		"start": "npm run build && npm run start-server",
-		"start-server": "lerna run start-server",
-		"client": "lerna run client",
-		"server": "lerna run server --stream",
-		"dev": "concurrently \"npm run server\" \"npm run client\""
-	},
-	"dependencies": {
-		"lerna": "^4.0.0",
-		"typescript": "^4.5.5"
-	},
-	"devDependencies": {
-		"concurrently": "^7.0.0",
-		"eslint": "^8.8.0",
-		"eslint-config-airbnb": "^19.0.4",
-		"eslint-plugin-import": "^2.11.0",
-		"eslint-plugin-jsx-a11y": "^6.0.3",
-		"eslint-plugin-react": "^7.7.0"
-	}
+    "name": "lerna",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "clean-install": "lerna bootstrap",
+        "dev": "npm run build:all:dev:tsc",
+        "build": "npm run clean && npm run build:all",
+        "build:all": "lerna run build:all",
+        "build:all:dev": "lerna run build:all:dev --parallel",
+        "build:all:dev:tsc": "tsc-watch -b . -w --onFirstSuccess \"npm run build:all:dev\"",
+        "start": "lerna run start --stream",
+        "clean": "lerna run clean",
+        "test": "lerna run test",
+        "check-typings": "tsc -b ."
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@babel/preset-typescript": "^7.16.7",
+        "lerna": "^4.0.0",
+        "rimraf": "^3.0.2",
+        "tsc-watch": "^5.0.3",
+        "typescript": "^4.6.3"
+    },
+    "dependencies": {
+        "concurrently": "^7.1.0"
+    }
 }
