--- a/packages/_apps/admin/client/package.json
+++ b/packages/_apps/admin/client/package.json
@@ -1,21 +1,19 @@
 {
-    "name": "@dieta/common",
+    "name": "@dieta/admin-client",
     "version": "1.0.0",
     "description": "",
-    "main": "dist/lib/index.js",
-    "module": "dist/lib/index.js",
+    "main": "dist/app/index.js",
+    "module": "dist/app/index.js",
     "typings": "dist/@types/src/index.d.ts",
     "directories": {
         "dist/@types": "dist/@types",
-        "dist/lib": "dist/lib"
+        "dist/lib": "dist/app"
     },
-    "files": [
-        "dist"
-    ],
     "scripts": {
+        "test": "echo \"Error: no test specified\" ",
         "build:all": "concurrently \"npm:build:typings\" \"npm:build:app\"",
         "build:all:dev": "concurrently \"npm:build:typings:dev\" \"npm:build:app:dev\"",
-        "build:app": "babel ./sources/src/ --out-dir ./dist/lib --copy-files --source-maps --extensions \".ts,\"",
+        "build:app": "babel ./sources/src --out-dir ./dist/app --copy-files --source-maps --extensions \".ts,\"",
         "build:app:dev": "npm run build:app -- --watch",
         "build:typings": "babel ./sources/@types --out-dir ./dist/@types --copy-files",
         "build:typings:dev": "npm run build:typings -- --watch",
@@ -25,13 +23,5 @@
     },
     "keywords": [],
     "author": "",
-    "license": "ISC",
-    "dependencies": {},
-    "devDependencies": {
-        "@babel/cli": "^7.17.6",
-        "@babel/core": "^7.17.9",
-        "@babel/preset-env": "^7.16.11",
-        "babel-preset-minify": "^0.5.1",
-        "typescript": "^4.6.3"
-    }
+    "license": "ISC"
 }
