--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
         "typescript": "^4.6.3"
     },
     "dependencies": {
-        "concurrently": "^7.1.0"
+        "concurrently": "^7.1.0",
+        "@babel/cli": "^7.17.6",
+        "@babel/core": "^7.17.9",
+        "@babel/preset-env": "^7.16.11",
+        "@babel/preset-react": "^7.16.7",
+        "babel-preset-minify": "^0.5.1"
     }
 }
