--- a/packages/_apps/admin/client/package.json
+++ b/packages/_apps/admin/client/package.json
@@ -13,8 +13,9 @@
         "test": "echo \"Error: no test specified\" ",
         "build:all": "concurrently \"npm:build:typings\" \"npm:build:app\"",
         "build:all:dev": "concurrently \"npm:build:typings:dev\" \"npm:build:app:dev\"",
-        "build:app": "babel ./sources/src --out-dir ./dist/app --copy-files --source-maps --extensions \".ts,\"",
-        "build:app:dev": "npm run build:app -- --watch",
+        "start": "next start ./sources/src",
+        "build:app": "next build ./sources/src -p 3001",
+        "build:app:dev": "next dev ./sources/src -p 3001",
         "build:typings": "babel ./sources/@types --out-dir ./dist/@types --copy-files",
         "build:typings:dev": "npm run build:typings -- --watch",
         "clean": "concurrently \"npm:clean:tsbuild\" \"npm:clean:sources\"",
@@ -23,5 +24,19 @@
     },
     "keywords": [],
     "author": "",
-    "license": "ISC"
+    "license": "ISC",
+    "dependencies": {
+        "@babel/preset-react": "^7.16.7",
+        "@reduxjs/toolkit": "^1.6.2",
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0",
+        "axios": "^0.19.0",
+        "next": "^12.1.4",
+        "react": "18.0.0",
+        "react-dom": "^18.0.0",
+        "react-redux": "^7.2.5",
+        "redux": "^4.1.2",
+        "redux-dynamic-modules": "^5.2.3",
+        "redux-dynamic-modules-saga": "^5.2.3"
+    }
 }
