--- a/packages/_apps/admin/client/tsconfig.json
+++ b/packages/_apps/admin/client/tsconfig.json
@@ -5,6 +5,14 @@
         "rootDir": "./sources",
         "module": "esnext",
         "target": "esnext",
-        "types": ["node"]
-    }
+        "lib": ["dom", "dom.iterable", "esnext"],
+        "allowJs": true,
+        "noEmit": true,
+        "incremental": true,
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "jsx": "preserve"
+    },
+    "include": ["**/*.ts", "**/*.tsx"],
+    "exclude": ["node_modules"]
 }
