--- a/packages/_apps/website/server/package.json
+++ b/packages/_apps/website/server/package.json
@@ -25,8 +25,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.17.3",
-        "@dieta/common": "1.0.0"
+        "@dieta/common": "1.0.0",
+        "@types/cors": "^2.8.12",
+        "cors": "^2.8.5",
+        "express": "^4.17.3"
     },
     "devDependencies": {
         "@babel/cli": "^7.17.6",
