--- a/packages/_apps/website/client/package.json
+++ b/packages/_apps/website/client/package.json
@@ -30,6 +30,7 @@
         "@reduxjs/toolkit": "^1.6.2",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
+        "@dieta/common": "1.0.0",
         "axios": "^0.19.0",
         "next": "^12.1.4",
         "react": "18.0.0",
