--- a/packages/_apps/admin/client/package.json
+++ b/packages/_apps/admin/client/package.json
@@ -27,12 +27,13 @@
     "license": "ISC",
     "dependencies": {
         "@babel/preset-react": "^7.16.7",
+        "@dieta/common": "1.0.0",
         "@reduxjs/toolkit": "^1.6.2",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
-        "@dieta/common": "1.0.0",
         "axios": "^0.26.1",
         "next": "^12.1.4",
+        "next-redux-wrapper": "^7.0.5",
         "react": "18.0.0",
         "react-dom": "^18.0.0",
         "react-redux": "^7.2.5",
