--- a/packages/_apps/website/client/tsconfig.json
+++ b/packages/_apps/website/client/tsconfig.json
@@ -1,18 +1,27 @@
 {
     "extends": "../../../../tsconfig-base.json",
     "compilerOptions": {
-        "outDir": "./dist/@types",
-        "rootDir": "./sources",
-        "module": "esnext",
-        "target": "esnext",
+        "target": "es5",
         "lib": ["dom", "dom.iterable", "esnext"],
         "allowJs": true,
+        "skipLibCheck": true,
+        "strict": false,
+        "forceConsistentCasingInFileNames": true,
         "noEmit": true,
-        "incremental": true,
+        "esModuleInterop": true,
+        "module": "esnext",
+        "moduleResolution": "node",
         "resolveJsonModule": true,
         "isolatedModules": true,
-        "jsx": "preserve"
+        "jsx": "preserve",
+        "baseUrl": "./sources/src",
+        "incremental": true
     },
-    "include": ["**/*.ts", "**/*.tsx"],
+    "include": [
+        "source/src/next-env.d.ts",
+        "**/*.ts",
+        "**/*.tsx",
+        "source/src/next.config.js"
+    ],
     "exclude": ["node_modules"]
 }
