added migrations with next

--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
-    "name": "lerna",
+    "name": "dietacookies",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
     "scripts": {
         "clean-install": "npx lerna bootstrap",
-        "dev": "npm run build:all:dev:tsc",
-        "build": "npm run clean && npm run build:all",
+        "dev": "npm run build:migrations && npm run build:seeds && npm run build:all:dev:tsc",
+        "build": "npm run clean && npm run build:migrations && npm run build:tsc && npm run build:all",
         "build:all": "lerna run build:all",
+        "build:tsc": "tsc -b .",
         "build:all:dev": "lerna run build:all:dev --parallel",
         "build:all:dev:tsc": "tsc-watch -b . -w --onFirstSuccess \"npm run build:all:dev\"",
+        "build:migrations": "npm run migrate:latest",
+        "build:seeds": "npm run seed:run",
         "start": "lerna run start --stream",
         "clean": "lerna run clean",
         "test": "lerna run test",
         "check-typings": "tsc -b .",
-        "reset": "npm run clean-install && npm run build"
+        "reset": "npm run clean-install && npm run build",
+        "migrate:make": "lerna run knex:migrate:make",
+        "migrate:latest": "lerna run knex:migrate:latest",
+        "migrate:rollback": "lerna run knex:migrate:rollback",
+        "seed:make": "lerna run knex:seed:make",
+        "seed:run": "lerna run knex:seed:run"
     },
     "keywords": [],
     "author": "",
