--- a/packages/_apps/admin/server/package.json
+++ b/packages/_apps/admin/server/package.json
@@ -15,7 +15,7 @@
         "build:all:dev": "concurrently \"npm:build:typings:dev\" \"npm:build:app:dev\"",
         "build:app": "babel ./sources/src --out-dir ./dist/app --copy-files --source-maps --extensions \".ts,\"",
         "build:app:dev": "npm run build:app -- --watch",
-        "build:typings": "babel ./sources/@types --out-dir ./dist/@types --copy-files",
+        "build:typings": "babel ./sources/@types --out-dir ./dist/@types $NAME --copy-files",
         "build:typings:dev": "npm run build:typings -- --watch",
         "clean": "concurrently \"npm:clean:tsbuild\" \"npm:clean:sources\"",
         "clean:sources": "rimraf dist/{app,@types}/**",
@@ -25,15 +25,23 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.17.3",
-        "@dieta/common": "1.0.0"
+        "core-js": "^3.22.4",
+        "cors": "^2.8.5",
+        "knex": "^2.0.0",
+        "pg": "^8.7.3",
+        "@dietacookies/express-app": "1.0.0",
+        "@dietacookies/graphql-server": "1.0.0",
+        "@dietacookies/database-connector": "1.0.0"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.12",
         "@babel/cli": "^7.17.6",
         "@babel/core": "^7.17.9",
         "@babel/preset-env": "^7.16.11",
-        "@types/express": "^4.17.13",
+        "@types/cookie-parser": "^1.4.2",
+        "@types/jsonwebtoken": "^8.5.8",
         "babel-preset-minify": "^0.5.1",
-        "ts-node-dev": "^1.1.8"
+        "graphql-middleware": "^6.1.25",
+        "jsonwebtoken": "^8.5.1"
     }
 }
