--- a/packages/_libs/database-connector/babel.config.json
+++ b/packages/_libs/database-connector/babel.config.json
@@ -13,7 +13,7 @@
                 "corejs": "3.6.5"
             }
         ],
-        // "minify",
+        "minify",
         "@babel/preset-typescript"
     ]
 }
