added migration files

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "main": "index.js",
     "scripts": {
         "clean-install": "npx lerna bootstrap",
-        "dev": "npm run build:migrations && npm run build:seeds && npm run build:all:dev:tsc",
-        "build": "npm run clean && npm run build:migrations && npm run build:tsc && npm run build:all",
+        "dev": "npm run build:all:dev:tsc",
+        "build": "npm run clean && npm run build:tsc && npm run build:all",
         "build:all": "lerna run build:all",
         "build:tsc": "tsc -b .",
         "build:all:dev": "lerna run build:all:dev --parallel",
@@ -17,7 +17,7 @@
         "clean": "lerna run clean",
         "test": "lerna run test",
         "check-typings": "tsc -b .",
-        "reset": "npm run clean-install && npm run build",
+        "reset": "npm run clean-install && npm run build:migrations && npm run build",
         "migrate:make": "lerna run knex:migrate:make",
         "migrate:latest": "lerna run knex:migrate:latest",
         "migrate:rollback": "lerna run knex:migrate:rollback",
