added env variables

--- a/.env.default
+++ b/.env.default
@@ -1,1 +1,11 @@
-TEST = 'test'
+#development
+
+CLIENT='postgresql'
+DATABASE='dietacookies'
+USER='dragosnitescu'
+
+#production
+
+PRODUCTION_CLIENT=''
+PRODUCTION_DATABASE=''
+PRODUCTION_USER=''
