--- a/packages/_apps/admin/server/tsconfig.json
+++ b/packages/_apps/admin/server/tsconfig.json
@@ -16,6 +16,12 @@
         },
         {
             "path": "../../../_libs/database-connector"
+        },
+        {
+            "path": "../../../_libs/data-access-layer"
+        },
+        {
+            "path": "../../../_libs/traceable-error"
         }
     ]
 }
