--- a/packages/_libs/graphql-server/tsconfig.json
+++ b/packages/_libs/graphql-server/tsconfig.json
@@ -5,5 +5,13 @@
         "rootDir": "./sources",
         "module": "esnext",
         "target": "esnext"
-    }
+    },
+    "references": [
+        {
+            "path": "../database-connector"
+        },
+        {
+            "path": "../data-access-layer"
+        }
+    ]
 }
