--- a/packages/_libs/services-errors/tsconfig.json
+++ b/packages/_libs/services-errors/tsconfig.json
@@ -9,10 +9,7 @@
     },
     "references": [
         {
-            "path": "../database-connector"
-        },
-        {
-            "path": "../services-errors"
+            "path": "../traceable-error"
         }
     ]
 }
