--- a/packages/_libs/graphql-server/package.json
+++ b/packages/_libs/graphql-server/package.json
@@ -31,7 +31,9 @@
         "@graphql-tools/resolvers-composition": "^6.4.9",
         "@graphql-tools/schema": "^8.3.10",
         "apollo-server-express": "^3.6.7",
-        "graphql": "^15.0.0"
+        "graphql": "^15.0.0",
+        "@dietacookies/database-connector": "1.0.0",
+        "@dietacookies/data-access-layer": "1.0.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.17.6",
