--- a/packages/_libs/services-errors/package.json
+++ b/packages/_libs/services-errors/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@dietacookies/data-access-layer",
+    "name": "@dietacookies/services-errors",
     "version": "1.0.0",
     "description": "",
     "main": "dist/lib/index.js",
@@ -27,9 +27,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@dietacookies/database-connector": "1.0.0",
-        "@dietacookies/services-errors": "1.0.0",
-        "camelcase-keys": "^7.0.2"
+        "@dietacookies/traceable-error": "1.0.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.17.6",
