--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -79,6 +79,7 @@
 
         /* Type Checking */
         "strict": true /* Enable all strict type-checking options. */,
-        "skipLibCheck": true /* Skip type checking all .d.ts files. */
+        "skipLibCheck": true /* Skip type checking all .d.ts files. */,
+        "strictPropertyInitialization": false
     }
 }
