--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
         { "path": "./packages/_libs/express-app" },
         { "path": "./packages/_libs/graphql-server" },
         { "path": "./packages/_libs/database-connector" },
-        { "path": "./packages/_libs/data-access-layer" }
+        { "path": "./packages/_libs/data-access-layer" },
+        { "path": "./packages/_libs/traceable-error" },
+        { "path": "./packages/_libs/services-errors" }
     ]
 }
