--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
     },
     "devDependencies": {
         "@babel/preset-typescript": "^7.16.7",
+        "husky": "^8.0.1",
         "lerna": "^4.0.0",
+        "lint-staged": "^12.4.1",
         "prettier": "^2.6.2",
         "prettier-eslint": "^14.0.2",
         "rimraf": "^3.0.2",
         "tsc-watch": "^5.0.3",
-        "typescript": "^4.6.3",
-        "husky": "^8.0.1",
-        "lint-staged": "^12.4.1"
+        "typescript": "^4.6.3"
     },
     "dependencies": {
         "@babel/cli": "^7.17.6",
