added initial user to seed/added model for create user

--- a/packages/_libs/data-access-layer/package.json
+++ b/packages/_libs/data-access-layer/package.json
@@ -29,7 +29,8 @@
     "dependencies": {
         "@dietacookies/database-connector": "1.0.0",
         "@dietacookies/services-errors": "1.0.0",
-        "camelcase-keys": "^7.0.2"
+        "camelcase-keys": "^7.0.2",
+        "snakecase-keys": "^5.4.2"
     },
     "devDependencies": {
         "@babel/cli": "^7.17.6",
