--- a/packages/_libs/graphql-server/tsconfig.json
+++ b/packages/_libs/graphql-server/tsconfig.json
@@ -12,6 +12,9 @@
         },
         {
             "path": "../data-access-layer"
+        },
+        {
+            "path": "../services-errors"
         }
     ]
 }
