--- a/packages/_libs/graphql-server/package.json
+++ b/packages/_libs/graphql-server/package.json
@@ -33,7 +33,8 @@
         "apollo-server-express": "^3.6.7",
         "graphql": "^15.0.0",
         "@dietacookies/database-connector": "1.0.0",
-        "@dietacookies/data-access-layer": "1.0.0"
+        "@dietacookies/data-access-layer": "1.0.0",
+        "@dietacookies/services-errors": "1.0.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.17.6",
