--- a/packages/_apps/admin/server/tsconfig.json
+++ b/packages/_apps/admin/server/tsconfig.json
@@ -22,6 +22,9 @@
         },
         {
             "path": "../../../_libs/traceable-error"
+        },
+        {
+            "path": "../../../_libs/logger"
         }
     ]
 }
