--- a/packages/_libs/graphql-server/package.json
+++ b/packages/_libs/graphql-server/package.json
@@ -27,14 +27,16 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@dietacookies/data-access-layer": "1.0.0",
+        "@dietacookies/database-connector": "1.0.0",
+        "@dietacookies/services-errors": "1.0.0",
         "@graphql-tools/merge": "^8.2.10",
         "@graphql-tools/resolvers-composition": "^6.4.9",
         "@graphql-tools/schema": "^8.3.10",
+        "@types/graphql-depth-limit": "^1.1.3",
         "apollo-server-express": "^3.6.7",
         "graphql": "^15.0.0",
-        "@dietacookies/database-connector": "1.0.0",
-        "@dietacookies/data-access-layer": "1.0.0",
-        "@dietacookies/services-errors": "1.0.0"
+        "graphql-depth-limit": "^1.1.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.17.6",
