--- a/packages/_libs/logger/package.json
+++ b/packages/_libs/logger/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@dietacookies/data-access-layer",
+    "name": "@dietacookies/logger",
     "version": "1.0.0",
     "description": "",
     "main": "dist/lib/index.js",
@@ -27,13 +27,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@dietacookies/database-connector": "1.0.0",
-        "@dietacookies/services-errors": "1.0.0",
-        "@dietacookies/logger": "1.0.0",
-        "ajv": "^8.11.0",
-        "ajv-formats": "^2.1.1",
-        "camelcase-keys": "^7.0.2",
-        "snakecase-keys": "^5.4.2"
+        "winston": "^3.7.2"
     },
     "devDependencies": {
         "@babel/cli": "^7.17.6",
