--- a/packages/_apps/admin/server/package.json
+++ b/packages/_apps/admin/server/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@dieta/admin-server",
+    "name": "@dietacookies/admin-server",
     "version": "1.0.0",
     "description": "",
     "main": "dist/app/index.js",
@@ -26,23 +26,24 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@dietacookies/data-access-layer": "1.0.0",
+        "@dietacookies/database-connector": "1.0.0",
+        "@dietacookies/express-app": "1.0.0",
+        "@dietacookies/graphql-server": "1.0.0",
+        "@dietacookies/logger": "1.0.0",
+        "@dietacookies/traceable-error": "1.0.0",
+        "cookie-session": "^2.0.0",
         "core-js": "^3.22.4",
         "cors": "^2.8.5",
         "knex": "^2.0.0",
-        "pg": "^8.7.3",
-        "@dietacookies/express-app": "1.0.0",
-        "@dietacookies/graphql-server": "1.0.0",
-        "@dietacookies/database-connector": "1.0.0",
-        "@dietacookies/data-access-layer": "1.0.0",
-        "@dietacookies/traceable-error": "1.0.0",
-        "@dietacookies/logger": "1.0.0"
+        "pg": "^8.7.3"
     },
     "devDependencies": {
-        "@types/cors": "^2.8.12",
         "@babel/cli": "^7.17.6",
         "@babel/core": "^7.17.9",
         "@babel/preset-env": "^7.16.11",
         "@types/cookie-parser": "^1.4.2",
+        "@types/cors": "^2.8.12",
         "@types/jsonwebtoken": "^8.5.8",
         "babel-preset-minify": "^0.5.1",
         "graphql-middleware": "^6.1.25",
