--- a/packages/_libs/express-app/package.json
+++ b/packages/_libs/express-app/package.json
@@ -27,17 +27,19 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.17.3",
+        "@types/cookie-session": "^2.0.44",
+        "cookie-parser": "^1.4.6",
+        "cookie-session": "^2.0.0",
         "core-js": "^3.22.4",
         "cors": "^2.8.5",
-        "cookie-parser": "^1.4.6"
+        "express": "^4.17.3"
     },
     "devDependencies": {
         "@babel/cli": "^7.17.6",
         "@babel/core": "^7.17.9",
         "@babel/preset-env": "^7.16.11",
+        "@types/express": "^4.17.13",
         "babel-preset-minify": "^0.5.1",
-        "typescript": "^4.6.3",
-        "@types/express": "^4.17.13"
+        "typescript": "^4.6.3"
     }
 }
