--- a/packages/_libs/graphql-server/package.json
+++ b/packages/_libs/graphql-server/package.json
@@ -36,7 +36,8 @@
         "@types/graphql-depth-limit": "^1.1.3",
         "apollo-server-express": "^3.6.7",
         "graphql": "^15.0.0",
-        "graphql-depth-limit": "^1.1.0"
+        "graphql-depth-limit": "^1.1.0",
+        "jsonwebtoken": "^8.5.1"
     },
     "devDependencies": {
         "@babel/cli": "^7.17.6",
