--- a/packages/_apps/admin/server/package.json
+++ b/packages/_apps/admin/server/package.json
@@ -10,13 +10,11 @@
         "dist/lib": "dist/app"
     },
     "scripts": {
-        "test": "echo \"Error: no test specified\" ",
         "build:all": "concurrently \"npm:build:typings\" \"npm:build:app\"",
         "build:all:dev": "concurrently \"npm:build:typings:dev\" \"npm:build:app:dev\"",
         "build:app": "babel ./sources/src --out-dir ./dist/app --copy-files --source-maps --extensions \".ts,\"",
-        "build:app:test": "babel ./sources/src --out-dir ../client/test/dist/app --copy-files --source-maps --extensions \".ts,\"",
         "build:app:dev": "npm run build:app -- --watch",
-        "build:typings": "babel ./sources/@types --out-dir ./dist/@types $NAME --copy-files",
+        "build:typings": "babel ./sources/@types --out-dir ./dist/@types --copy-files",
         "build:typings:dev": "npm run build:typings -- --watch",
         "clean": "concurrently \"npm:clean:tsbuild\" \"npm:clean:sources\"",
         "clean:sources": "rimraf dist/{app,@types}/**",
