--- a/packages/_apps/admin/client/tsconfig.json
+++ b/packages/_apps/admin/client/tsconfig.json
@@ -4,7 +4,15 @@
         "outDir": "./dist/@types",
         "rootDir": "./sources",
         "module": "esnext",
-        "target": "esnext"
+        "target": "esnext",
+        "jsx": "react-jsx"
     },
-    "references": []
+    "references": [
+        {
+            "path": "../../../_libs/client-libs"
+        },
+        {
+            "path": "../../../_libs/build-tools"
+        }
+    ]
 }
