--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "build:migrations": "npm run migrate:latest",
         "build:seeds": "npm run seed:run",
         "start": "lerna run start --stream",
+        "start:web": "lerna run start:web",
         "clean": "lerna run clean",
         "test": "lerna run test",
         "check-typings": "tsc -b .",
