--- a/packages/_libs/client-libs/package.json
+++ b/packages/_libs/client-libs/package.json
@@ -1,48 +1,39 @@
 {
-    "name": "@dietacookies/admin-server",
+    "name": "@dietacookies/client-libs",
     "version": "1.0.0",
     "description": "",
-    "main": "dist/app/index.js",
-    "module": "dist/app/index.js",
+    "main": "dist/lib/index.js",
+    "module": "dist/lib/index.js",
     "typings": "dist/@types/src/index.d.ts",
     "directories": {
         "dist/@types": "dist/@types",
-        "dist/lib": "dist/app"
+        "dist/lib": "dist/lib"
     },
+    "files": [
+        "dist"
+    ],
     "scripts": {
         "build:all": "concurrently \"npm:build:typings\" \"npm:build:app\"",
         "build:all:dev": "concurrently \"npm:build:typings:dev\" \"npm:build:app:dev\"",
-        "build:app": "babel ./sources/src --out-dir ./dist/app --copy-files --source-maps --extensions \".ts,\"",
+        "build:app": "babel ./sources/src/ --out-dir ./dist/lib --copy-files --source-maps --extensions \".ts,\"",
         "build:app:dev": "npm run build:app -- --watch",
         "build:typings": "babel ./sources/@types --out-dir ./dist/@types --copy-files",
         "build:typings:dev": "npm run build:typings -- --watch",
         "clean": "concurrently \"npm:clean:tsbuild\" \"npm:clean:sources\"",
-        "clean:sources": "rimraf dist/{public,tools,@types}/**",
+        "clean:sources": "rimraf dist/{lib,@types}/**",
         "clean:tsbuild": "rimraf dist/tsconfig.tsbuildinfo"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@dietacookies/data-access-layer": "1.0.0",
-        "@dietacookies/database-connector": "1.0.0",
-        "@dietacookies/express-app": "1.0.0",
-        "@dietacookies/graphql-server": "1.0.0",
-        "@dietacookies/logger": "1.0.0",
-        "@dietacookies/traceable-error": "1.0.0",
-        "core-js": "^3.22.4",
-        "cors": "^2.8.5",
-        "knex": "^2.0.0",
-        "pg": "^8.7.3"
+        "extract-files": "^12.0.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.17.6",
         "@babel/core": "^7.17.9",
         "@babel/preset-env": "^7.16.11",
-        "@types/cors": "^2.8.12",
-        "@types/jsonwebtoken": "^8.5.8",
-        "babel-preset-minify": "^0.5.1",
-        "graphql-middleware": "^6.1.25",
-        "jsonwebtoken": "^8.5.1"
+        "@types/express": "^4.17.13",
+        "babel-preset-minify": "^0.5.1"
     }
 }
