--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
         { "path": "./packages/_libs/data-access-layer" },
         { "path": "./packages/_libs/traceable-error" },
         { "path": "./packages/_libs/services-errors" },
-        { "path": "./packages/_libs/logger" }
+        { "path": "./packages/_libs/logger" },
+        { "path": "./packages/_libs/client-libs" },
+        { "path": "./packages/_libs/build-tools" }
     ]
 }
