--- a/packages/_apps/admin/client/babel.config.json
+++ b/packages/_apps/admin/client/babel.config.json
@@ -12,6 +12,10 @@
             }
         ],
         "@babel/preset-typescript",
-        ["@babel/preset-react", { "runtime": "automatic" }]
-    ]
+        [
+            "@babel/preset-react",
+            { "runtime": "automatic", "importSource": "@emotion/react" }
+        ]
+    ],
+    "plugins": ["@emotion/babel-plugin"]
 }
