--- a/packages/_apps/admin/client/package.json
+++ b/packages/_apps/admin/client/package.json
@@ -21,10 +21,7 @@
   "dependencies": {
     "@dietacookies/build-tools": "1.0.0",
     "@dietacookies/client-libs": "1.0.0",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.8.2",
-    "@mui/material": "^5.8.2",
+    "@dietacookies/ui-libs": "1.0.0",
     "@reduxjs/toolkit": "^1.6.2",
     "react": "^18.1.0",
     "react-dom": "^18.0.0",
@@ -33,15 +30,15 @@
     "redux": "^4.1.2",
     "redux-dynamic-modules": "^5.2.3",
     "redux-dynamic-modules-saga": "^5.2.3",
-    "redux-saga": "^1.1.3",
-    "tss-react": "^3.7.0"
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.17.12",
     "@babel/cli": "^7.17.6",
     "@babel/core": "^7.17.9",
+    "@emotion/babel-plugin": "^11.9.2",
     "@babel/plugin-proposal-decorators": "^7.18.2",
     "@babel/plugin-transform-runtime": "^7.18.5",
+    "@babel/preset-react": "^7.17.12",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3"
