--- a/packages/_apps/admin/client/tsconfig.json
+++ b/packages/_apps/admin/client/tsconfig.json
@@ -5,7 +5,9 @@
         "rootDir": "./sources",
         "module": "esnext",
         "target": "esnext",
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
+        "jsxImportSource": "@emotion/react",
+        "types": ["@emotion/react/types/css-prop"]
     },
     "references": [
         {
@@ -13,6 +15,9 @@
         },
         {
             "path": "../../../_libs/build-tools"
+        },
+        {
+            "path": "../../../_libs/ui_libs"
         }
     ]
 }
