--- a/packages/_libs/build-tools/package.json
+++ b/packages/_libs/build-tools/package.json
@@ -31,6 +31,7 @@
         "babel-loader": "^8.2.5",
         "babel-plugin-import": "^1.13.5",
         "copy-webpack-plugin": "^11.0.0",
+        "file-loader": "^6.2.0",
         "handlebars-loader": "^1.7.2",
         "html-webpack-plugin": "^5.5.0",
         "source-map-loader": "^4.0.0"
