--- a/packages/_libs/ui_libs/package.json
+++ b/packages/_libs/ui_libs/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@dietacookies/express-app",
+    "name": "@dietacookies/ui-libs",
     "version": "1.0.0",
     "description": "",
     "main": "dist/lib/index.js",
@@ -27,19 +27,18 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "cookie-parser": "^1.4.6",
-        "core-js": "^3.22.4",
-        "cors": "^2.8.5",
-        "express": "^4.17.3"
+        "@emotion/core": "^11.0.0",
+        "@emotion/react": "^11.9.0",
+        "@emotion/styled": "^11.8.1",
+        "@mui/icons-material": "^5.8.2",
+        "@mui/material": "^5.8.2",
+        "tss-react": "^3.7.0"
     },
     "devDependencies": {
-        "@types/cookie-parser": "^1.4.3",
-        "@types/cookie-session": "^2.0.44",
         "@babel/cli": "^7.17.6",
         "@babel/core": "^7.17.9",
         "@babel/preset-env": "^7.16.11",
         "@types/express": "^4.17.13",
-        "babel-preset-minify": "^0.5.1",
-        "typescript": "^4.6.3"
+        "babel-preset-minify": "^0.5.1"
     }
 }
