--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
         { "path": "./packages/_libs/services-errors" },
         { "path": "./packages/_libs/logger" },
         { "path": "./packages/_libs/client-libs" },
+        { "path": "./packages/_libs/ui_libs" },
         { "path": "./packages/_libs/build-tools" }
     ]
 }
