--- a/packages/_libs/ui_libs/tsconfig.json
+++ b/packages/_libs/ui_libs/tsconfig.json
@@ -5,6 +5,7 @@
         "rootDir": "./sources",
         "module": "esnext",
         "target": "esnext",
+        "jsx": "react-jsx",
         "types": ["node"]
     },
     "references": []
