--- a/packages/_apps/admin/client/package.json
+++ b/packages/_apps/admin/client/package.json
@@ -30,15 +30,17 @@
     "redux": "^4.1.2",
     "redux-dynamic-modules": "^5.2.3",
     "redux-dynamic-modules-saga": "^5.2.3",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "formik": "^2.2.9",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
     "@babel/core": "^7.17.9",
-    "@emotion/babel-plugin": "^11.9.2",
     "@babel/plugin-proposal-decorators": "^7.18.2",
     "@babel/plugin-transform-runtime": "^7.18.5",
     "@babel/preset-react": "^7.17.12",
+    "@emotion/babel-plugin": "^11.9.2",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3"
