--- a/packages/_libs/ui_libs/babel.config.json
+++ b/packages/_libs/ui_libs/babel.config.json
@@ -4,16 +4,18 @@
             "@babel/preset-env",
             {
                 "targets": {
-                    "edge": "17",
-                    "firefox": "60",
-                    "chrome": "67",
-                    "safari": "11.1"
+                    "node": "16"
                 },
                 "useBuiltIns": "usage",
-                "corejs": "3.6.5"
+                "shippedProposals": true,
+                "corejs": { "version": "3.15", "proposals": true }
             }
         ],
-        "minify",
-        "@babel/preset-typescript"
-    ]
+        "@babel/preset-typescript",
+        [
+            "@babel/preset-react",
+            { "runtime": "automatic", "importSource": "@emotion/react" }
+        ]
+    ],
+    "plugins": ["@emotion/babel-plugin"]
 }
