--- a/package.json
+++ b/package.json
@@ -25,14 +25,27 @@
         "seed:make": "lerna run knex:seed:make",
         "seed:run": "lerna run knex:seed:run",
         "prepare": "husky install",
-        "prettier:format": "prettier --write ."
+        "lint": "eslint --ignore-path .eslintignore --ext .js,.ts,.tsx,.jsx .",
+        "validate": "npm run lint"
+        
     },
     "keywords": [],
     "author": "",
     "devDependencies": {
         "@babel/preset-typescript": "^7.16.7",
+        "@types/prettier": "^2.6.3",
+        "@typescript-eslint/eslint-plugin": "^5.30.7",
+        "@typescript-eslint/parser": "^5.30.7",
+        "eslint": "^8.20.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-import-resolver-typescript": "^3.3.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-sort-import": "^1.0.7",
         "husky": "^8.0.1",
+        "import-sort": "^6.0.0",
         "lerna": "^5.0.0",
+        "prettier": "^2.7.1",
         "rimraf": "^3.0.2",
         "tsc-watch": "^5.0.3",
         "typescript": "^4.6.3"
@@ -42,8 +55,21 @@
         "@babel/core": "^7.17.9",
         "@babel/preset-env": "^7.16.11",
         "@babel/preset-react": "^7.17.12",
+        "@types/node": "^18.6.1",
         "babel-preset-minify": "^0.5.1",
         "concurrently": "^7.1.0",
-        "prettier": "^2.7.1"
+        "eslint-config-airbnb": "^19.0.4"
+    },
+    "importSort": {
+        ".js, .jsx, .es6, .es": {
+            "parser": "babylon",
+            "style": "eslint",
+            "options": {}
+        },
+        ".ts, .tsx": {
+            "parser": "typescript",
+            "style": "eslint",
+            "options": {}
+        }
     }
 }
