--- a/package.json
+++ b/package.json
@@ -57,8 +57,7 @@
         "@babel/preset-react": "^7.17.12",
         "@types/node": "^18.6.1",
         "babel-preset-minify": "^0.5.1",
-        "concurrently": "^7.1.0",
-        "eslint-config-airbnb": "^19.0.4"
+        "concurrently": "^7.1.0"
     },
     "importSort": {
         ".js, .jsx, .es6, .es": {
